# tokenlens

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
Formula/: tokenlens.rb
cloud/: Dockerfile  README.md  package.json  vercel.json
cloud/app/: layout.tsx  page.tsx
cloud/app/api/budget/: route.ts
cloud/app/api/budget/check/: route.ts
cloud/app/api/ingest/: route.ts
cloud/db/: schema.sql
cloud/lib/: db.ts
cloud/scripts/: init-db.mjs
crates/tokenlens-core/: Cargo.toml  NOTICE
crates/tokenlens-core/src/: analytics.rs  budget.rs  doctor.rs  filter.rs  hook.rs  init.rs  lib.rs  main.rs  rewrite.rs  tokens.rs  tracking.rs
crates/tokenlens-core/src/cmds/: fetch.rs  mod.rs  read.rs  runner.rs
crates/tokenlens-core/src/recorder/: mod.rs
crates/tokenlens-core/src/registry/: embedded.rs  mod.rs
crates/tokenlens-core/src/semantic/: cache.rs  mod.rs
crates/tokenlens-format/: Cargo.toml
crates/tokenlens-format/src/: lib.rs
crates/tokenlens-mcp/: Cargo.toml
crates/tokenlens-mcp/src/: main.rs
crates/tokenlens-uhp/: Cargo.toml
crates/tokenlens-uhp/src/: lib.rs
deploy/k8s/: cloud.yaml  kustomization.yaml  postgres.yaml
docs/: DESIGN.md  SELF_HOSTING.md
hooks/claude/: tokenlens-rewrite.sh
hooks/cline/: rules.md
hooks/codex/: tokenlens-awareness.md
hooks/cursor/: tokenlens-rewrite.sh
hooks/perplexity/: README.md  skill.md
hooks/windsurf/: rules.md
scripts/: install.sh  regenerate-embedded.sh
tests/e2e/: README.md  run.sh
tests/e2e/fixtures/: claude-code-bash-git-status.expect.json  claude-code-bash-git-status.in.json  claude-code-pytest.in.json  codex-cli-shell-cargo-build.in.json  cursor-bash-npm-test.in.json  perplexity-bash-echo.expect.json  perplexity-bash-echo.in.json
web/: README.md  package.json
web/app/: globals.css  layout.tsx  page.tsx
