[workspace]
resolver = "2"
members = [
    "crates/tokenlens-core",
    "crates/tokenlens-format",
    "crates/tokenlens-mcp",
    "crates/tokenlens-uhp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["TokenLens contributors"]
repository = "https://github.com/sisodiabhumca/tokenlens"
homepage = "https://tokenlens.dev"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
colored = "2"
dirs = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
