[workspace]
resolver = "2"
members = [
    "crates/tokenlens-core",
    "crates/tokenlens-format",
    "crates/tokenlens-mcp",
    "crates/tokenlens-uhp",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["TokenLens contributors"]
repository = "https://github.com/sisodiabhumca/tokenlens"
homepage = "https://github.com/sisodiabhumca/tokenlens"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
colored = "2"
dirs = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# cargo-dist — prebuilt binaries published on every tagged release.
# Run `cargo dist init` locally to regenerate platform support tables.
[workspace.metadata.dist]
cargo-dist-version = "0.21.1"
ci = ["github"]
installers = ["shell", "powershell", "homebrew"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
pr-run-mode = "plan"
tap = "sisodiabhumca/homebrew-tokenlens"
formula = "tokenlens"
# Bundle the agent hook scripts and installer helpers in every archive.
include = ["hooks/", "scripts/install.sh", "README.md", "LICENSE"]
