[package]
name = "tokenlens-core"
description = "TokenLens — universal context-window optimizer for AI coding agents"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "tokenlens"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rusqlite.workspace = true
regex.workspace = true
colored.workspace = true
dirs.workspace = true
tokenlens-format = { path = "../tokenlens-format" }
tokenlens-uhp = { path = "../tokenlens-uhp" }
