[package]
name = "tokenlens-core"
description = "TokenLens — universal context-window optimizer for AI coding agents"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "tokenlens_core"
path = "src/lib.rs"

[[bin]]
name = "tokenlens"
path = "src/bin/tokenlens.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rusqlite.workspace = true
regex.workspace = true
colored.workspace = true
dirs.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "process", "time"] }
toml = "0.8"
once_cell = "1"
sha2 = "0.10"
ureq = { version = "2", features = ["json"] }
tokenlens-format = { path = "../tokenlens-format" }
tokenlens-uhp = { path = "../tokenlens-uhp" }

[dev-dependencies]
tempfile = "3"

[features]
default = []
