[package]
name = "tokenlens-mcp"
description = "TokenLens MCP server — drop-in for Claude Desktop, ChatGPT Desktop, Cursor MCP"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "tokenlens-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
